# wakareeru

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.basepod  README.md  environment.min.yml  environment.yml  pipeline_entry.py  pyproject.toml  requirements-runpod.txt
.claude/: settings.local.json
config/: manual_fine_grained_series.csv  manual_series_overrides.csv  pipeline_config.yaml  schema.sql
data/: img_crawl_checkpoint.csv  jr_east_freight_series.csv  jr_east_freight_series_wiki_commons.csv  llm_category_details.csv
docker/: entry.sh
docs/: contributing.md  contributing_zh.md  noise_review_loop.md  wakareeru-data-2.md
model_core/: __init__.py  loader.py  model.py  predict.py  preprocess.py
pipeline/: constants.py  deprecated_stage_08_siglip_crop_filtering.py  lr_model.py  path_normalization.py  stage_01_model_parsing  stage_01_model_parsing.py  stage_02_model_fixing.py  stage_03_manifest_crawling.py  stage_04_img_crawler.py  stage_05_siglip_image_filtering.py  stage_06_llm_metadata_labeling.py  stage_07_gdino_bbox.py  stage_08_fine_grain_series.py  stage_09_DINOv3_feature_extraction.py  stage_10_train_loss_tracking.py  stage_11_loss_analysis.py  stage_12_logistic_regression_filter.py  stage_13_lr_prediction.py  stage_13b_label_metadata_translation.py  stage_14_store_crops.py  stage_template.py  utils.py
tools/: export_noise_review_csv.py  import_noise_review_csv.py  label_review_gradio.py  loss_round_spotcheck_gradio.py  noise_review_gradio.py  normalize_image_paths.py  spotcheck.py
trainer/: __init__.py  checkpoint.py  (+5 more)
(+25 files in other folders)
